pkgs/dartcv_core/src/core.h

/**
 * @brief Create empty Mat

 * ALL return values with a type of `Pointer of Struct`,
 * e.g., Mat, the internal pointer (Mat.ptr) MUST be NULL
 * otherwise the memory of mat.ptr pointed to will NOT be freed correctly.
 * Mat* mat = (Mat*)malloc(sizeof(Mat));
 * CvStatus *status = Mat_New(mat);
 * Mat_Close(mat);
 *
 * @param rval Mat*
 * @return CvStatus
 */
CvStatus *Mat_New(Mat *rval);
CvStatus *Mat_NewWithSize(int rows, int cols, int type, Mat *rval);
CvStatus *Mat_NewWithSizes(VecI32 sizes, int type, Mat *rval);
CvStatus *Mat_NewWithSizesFromScalar(VecI32 sizes, int type, Scalar ar, Mat *rval);
CvStatus *Mat_NewWithSizesFromBytes(VecI32 sizes, int type, void *buf, Mat *rval);
CvStatus *Mat_NewFromScalar(const Scalar ar, int rows, int cols, int type, Mat *rval);
CvStatus *Mat_NewFromBytes(int rows, int cols, int type, void *buf, Mat *rval);
CvStatus *Mat_NewFromVecPoint(VecPoint vec, Mat *rval);
CvStatus *Mat_NewFromVecPoint2f(VecPoint2f vec, Mat *rval);
CvStatus *Mat_NewFromVecPoint3f(VecPoint3f vec, Mat *rval);
CvStatus *Mat_NewFromVecPoint3i(VecPoint3i vec, Mat *rval);
void Mat_Close(MatPtr m);
CvStatus *Mat_PatchNaNs(Mat m, double val);
CvStatus *Mat_Mean(Mat m, Scalar *rval);
CvStatus *Mat_MeanWithMask(Mat m, Mat mask, Scalar *rval);
CvStatus *Mat_MultiplyMat(Mat m, Mat val);
CvStatus *Mat_Mul(Mat m, Mat val, Mat *dst, double scale);
CvStatus *Mat_MultiplyUChar(Mat m, uint8_t val);
CvStatus *Mat_MultiplySChar(Mat m, int8_t val);
CvStatus *Mat_MultiplyI16(Mat m, int16_t val);
CvStatus *Mat_MultiplyU16(Mat m, uint16_t val);
CvStatus *Mat_MultiplyI32(Mat m, int32_t val);
CvStatus *Mat_MultiplyFloat(Mat m, float_t val);
CvStatus *Mat_MultiplyF64(Mat m, double_t val);
CvStatus *Mat_MultiplyMatrix(Mat x, Mat y, Mat *rval);
CvStatus *Mat_PCACompute(Mat src, Mat mean, Mat eigenvectors, Mat eigenvalues, int maxComponents);
CvStatus *Mat_Magnitude(Mat x, Mat y, Mat magnitude);
CvStatus *Mat_Max(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_MeanStdDev(Mat src, Scalar *dstMean, Scalar *dstStdDev);
CvStatus *Mat_MeanStdDevWithMask(Mat src, Scalar *dstMean, Scalar *dstStdDev, Mat mask);
CvStatus *Mat_Merge(VecMat mats, Mat *dst);
CvStatus *Mat_Min(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_MinMaxIdx(Mat m, double *minVal, double *maxVal, int *minIdx, int *maxIdx);
CvStatus *Mat_MinMaxLoc(Mat m, double *minVal, double *maxVal, Point *minLoc, Point *maxLoc);
CvStatus *Mat_MixChannels(VecMat src, VecMat dst, VecI32 fromTo);
CvStatus *Mat_MulSpectrums(Mat a, Mat b, Mat c, int flags, bool conjB);
CvStatus *Mat_Multiply(Mat src1, Mat src2, Mat dst, double scale, int dtype);
CvStatus *Mat_Normalize(Mat src, Mat dst, double alpha, double beta, int typ, int dtype, Mat mask);
CvStatus *Mat_PerspectiveTransform(Mat src, Mat dst, Mat tm);
CvStatus *Mat_PolarToCart(Mat magnitude, Mat degree, Mat x, Mat y, bool angleInDegrees);
CvStatus *Mat_Pow(Mat src, double power, Mat dst);
CvStatus *Mat_Phase(Mat x, Mat y, Mat angle, bool angleInDegrees);