lib/src/g/core.g.dart


@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Magnitude(
  Mat x,
  Mat y,
  Mat magnitude,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Max(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> Mat_Mean(
  Mat m,
  ffi.Pointer<Scalar> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Pointer<Scalar>, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> Mat_MeanStdDev(
  Mat src,
  ffi.Pointer<Scalar> dstMean,
  ffi.Pointer<Scalar> dstStdDev,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Pointer<Scalar>, ffi.Pointer<Scalar>, Mat)>()
external ffi.Pointer<CvStatus> Mat_MeanStdDevWithMask(
  Mat src,
  ffi.Pointer<Scalar> dstMean,
  ffi.Pointer<Scalar> dstStdDev,
  Mat mask,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Scalar>)>()
external ffi.Pointer<CvStatus> Mat_MeanWithMask(
  Mat m,
  Mat mask,
  ffi.Pointer<Scalar> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecMat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_Merge(
  VecMat mats,
  ffi.Pointer<Mat> dst,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_Min(
  Mat src1,
  Mat src2,
  Mat dst,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Double>,
        ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)>()
external ffi.Pointer<CvStatus> Mat_MinMaxIdx(
  Mat m,
  ffi.Pointer<ffi.Double> minVal,
  ffi.Pointer<ffi.Double> maxVal,
  ffi.Pointer<ffi.Int> minIdx,
  ffi.Pointer<ffi.Int> maxIdx,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Double>,
        ffi.Pointer<ffi.Double>, ffi.Pointer<Point>, ffi.Pointer<Point>)>()
external ffi.Pointer<CvStatus> Mat_MinMaxLoc(
  Mat m,
  ffi.Pointer<ffi.Double> minVal,
  ffi.Pointer<ffi.Double> maxVal,
  ffi.Pointer<Point> minLoc,
  ffi.Pointer<Point> maxLoc,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecMat, VecMat, VecI32)>()
external ffi.Pointer<CvStatus> Mat_MixChannels(
  VecMat src,
  VecMat dst,
  VecI32 fromTo,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Mat>, ffi.Double)>()
external ffi.Pointer<CvStatus> Mat_Mul(
  Mat m,
  Mat val,
  ffi.Pointer<Mat> dst,
  double scale,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_MulSpectrums(
  Mat a,
  Mat b,
  Mat c,
  int flags,
  bool conjB,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Double, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_Multiply(
  Mat src1,
  Mat src2,
  Mat dst,
  double scale,
  int dtype,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, double_t)>()
external ffi.Pointer<CvStatus> Mat_MultiplyF64(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, float_t)>()
external ffi.Pointer<CvStatus> Mat_MultiplyFloat(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>()
external ffi.Pointer<CvStatus> Mat_MultiplyI16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>()
external ffi.Pointer<CvStatus> Mat_MultiplyI32(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_MultiplyMat(
  Mat m,
  Mat val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_MultiplyMatrix(
  Mat x,
  Mat y,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>()
external ffi.Pointer<CvStatus> Mat_MultiplySChar(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>()
external ffi.Pointer<CvStatus> Mat_MultiplyU16(
  Mat m,
  int val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>()
external ffi.Pointer<CvStatus> Mat_MultiplyUChar(
  Mat m,
  int val,
);

/// @brief Create empty Mat
///
/// ALL return values with a type of `Pointer of Struct`,
/// e.g., Mat, the internal pointer (Mat.ptr) MUST be NULL
/// otherwise the memory of mat.ptr pointed to will NOT be freed correctly.
/// Mat* mat = (Mat*)malloc(sizeof(Mat));
/// CvStatus *status = Mat_New(mat);
/// Mat_Close(mat);
///
/// @param rval Mat*
/// @return CvStatus
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_New(
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Void>, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewFromBytes(
  int rows,
  int cols,
  int type,
  ffi.Pointer<ffi.Void> buf,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
        ffi.Pointer<ffi.Void>, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewFromBytes_Async(
  int rows,
  int cols,
  int type,
  ffi.Pointer<ffi.Void> buf,
  int step,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Scalar, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewFromScalar(
  Scalar ar,
  int rows,
  int cols,
  int type,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Scalar, ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewFromScalar_Async(
  Scalar s,
  int rows,
  int cols,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint(
  VecPoint vec,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint2f, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint2f(
  VecPoint2f vec,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint2f, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint2f_Async(
  VecPoint2f vec,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint3f, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint3f(
  VecPoint3f vec,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint3f, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint3f_Async(
  VecPoint3f vec,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint3i, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint3i(
  VecPoint3i vec,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecPoint, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewFromVecPoint_Async(
  VecPoint vec,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewWithSize(
  int rows,
  int cols,
  int type,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewWithSize_Async(
  int rows,
  int cols,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewWithSizes(
  VecI32 sizes,
  int type,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecI32, ffi.Int, VecChar, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewWithSizesFromBytes(
  VecI32 sizes,
  int type,
  VecChar buf,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecI32, ffi.Int, VecChar, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewWithSizesFromBytes_Async(
  VecI32 sizes,
  int type,
  VecChar buf,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, Scalar, ffi.Pointer<Mat>)>()
external ffi.Pointer<CvStatus> Mat_NewWithSizesFromScalar(
  VecI32 sizes,
  int type,
  Scalar ar,
  ffi.Pointer<Mat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecI32, ffi.Int, Scalar, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewWithSizesScalar_Async(
  VecI32 sizes,
  int type,
  Scalar s,
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecI32, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_NewWithSizes_Async(
  VecI32 sizes,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_New_Async(
  imp1.CvCallback_1 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Double, ffi.Double, ffi.Int, ffi.Int, Mat)>()
external ffi.Pointer<CvStatus> Mat_Normalize(
  Mat src,
  Mat dst,
  double alpha,
  double beta,
  int typ,
  int dtype,
  Mat mask,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_1)>()
external ffi.Pointer<CvStatus> Mat_Ones_Async(
  int rows,
  int cols,
  int type,
  imp1.CvCallback_1 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Int)>()
external ffi.Pointer<CvStatus> Mat_PCACompute(
  Mat src,
  Mat mean,
  Mat eigenvectors,
  Mat eigenvalues,
  int maxComponents,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Double)>()
external ffi.Pointer<CvStatus> Mat_PatchNaNs(
  Mat m,
  double val,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>()
external ffi.Pointer<CvStatus> Mat_PerspectiveTransform(
  Mat src,
  Mat dst,
  Mat tm,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_Phase(
  Mat x,
  Mat y,
  Mat angle,
  bool angleInDegrees,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Bool)>()
external ffi.Pointer<CvStatus> Mat_PolarToCart(
  Mat magnitude,
  Mat degree,
  Mat x,
  Mat y,
  bool angleInDegrees,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, ffi.Double, Mat)>()
external ffi.Pointer<CvStatus> Mat_Pow(
  Mat src,
  double power,
  Mat dst,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Float>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_f32_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<ffi.Float>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Float>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_f32_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<ffi.Float>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Float>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_f32_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<ffi.Float>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Double>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_f64_1(
  Mat m,
  int i,
  ffi.Pointer<ffi.Pointer<ffi.Double>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Double>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_f64_2(
  Mat m,
  int i,
  int j,
  ffi.Pointer<ffi.Pointer<ffi.Double>> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Double>>)>()
external ffi.Pointer<CvStatus> Mat_Ptr_f64_3(
  Mat m,
  int i,
  int j,
  int k,
  ffi.Pointer<ffi.Pointer<ffi.Double>> rval,
);
